--- a/bbt.bib
+++ b/bbt.bib
@@ -40,7 +40,7 @@
   archiveprefix = {arXiv},
   eprint        = {quant-ph/0409065},
   abstract      = {We introduce the language QML, a functional language for quantum computations on finite types. Its design is guided by its categorical semantics: QML programs are interpreted by morphisms in the category FQC of finite quantum computations, which provides a constructive semantics of irreversible quantum computations realisable as quantum gates. QML integrates reversible and irreversible quantum computations in one language, using first order strict linear logic to make weakenings explicit. Strict programs are free from decoherence and hence preserve superpositions and entanglement - which is essential for quantum parallelism.},
-  note          = {Introduces QML},
+  note          = {Introduces QML, see also \cite{Grattage2011}},
   timestamp     = {2021-04-18}
 }
 
@@ -388,6 +388,22 @@
   doi       = {10.1017/CBO9781139193313},
   timestamp = {2021-04-18},
   place     = {Cambridge}
+}
+
+@inproceedings{Grattage2011,
+  title         = {An Overview of QML With a Concrete Implementation in Haskell},
+  author        = {Jonathan Grattage},
+  year          = {2011},
+  month         = feb,
+  booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
+  series        = {Electronic Notes in Theoretical Computer Science},
+  volume        = {270},
+  pages         = {165--174},
+  doi           = {https://doi.org/10.1016/j.entcs.2011.01.015},
+  archiveprefix = {arxiv},
+  eprint        = {0806.2735},
+  abstract      = {This paper gives an introduction to and overview of the functional quantum programming language QML. The syntax of this language is defined and explained, along with a new QML definition of the quantum teleport algorithm. The categorical operational semantics of QML is also briefly introduced, in the form of annotated quantum circuits. This definition leads to a denotational semantics, given in terms of superoperators. Finally, an implementation in Haskell of the semantics for QML is presented as a compiler. The compiler takes QML programs as input, which are parsed into a Haskell datatype. The output from the compiler is either a quantum circuit (operational), an isometry (pure denotational) or a superoperator (impure denotational). Orthogonality judgements and problems with coproducts in QML are also discussed.},
+  note          = {See \cite{Altenkirch2005} for original description of QML}
 }
 
 @phdthesis{Green2010,
